# DecklynKern.github.io

./: .gitignore  CNAME  about.html  contact.html  index.html  main.css  main.js  projects.html  template.html
aca/: index.html  main.js
ace/: index.html  main.js
blog/: fractal1.html  fractal2.html  fractal3.html  index.html  main.css
chess/: Cargo.toml  build-wasm.sh  chess_web.js  chess_web_bg.wasm  credits.txt  index.html  lib.rs  main.js  style.css
eca/: index.html  main.js
fractal-viewer/: escape-time.js  fragment.glsl  index.html  lyapunov.js  main.js  newton.js  pendulum.js  recursive.js  root-finding.js  sources.html  style.css  util.js  vertex.glsl  webgl.js
fractal-viewer-webgpu/: index.html  style.css  webgpu.js
fractal-viewer/shaders/: escape-time.glsl  lyapunov.glsl  main.glsl  newton.glsl  pendulum.glsl  recursive.glsl  root-finding.glsl
group-creator/: index.html  main.css  main.js
l-systems/: index.html  main.js
pepega-typer/: html2canvas.js  index.html  main.js
pepega-viewer/: index.html  main.js
piano/: index.html  piano.js  style.css
smashtierlist/: aliases.js  index.html  main.js  style.css
tetrism/: index.html  main.js  tetrism.js  tetrism.wasm
ultrank/: index.html  main.js  style.css
