[package]
name = "chess_web"
path = "lib.rs"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = ["console"]

[dependencies.chess]
git = "https://github.com/DecklynKern/chess"
default-features = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"